# inbox-concierge

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  main.py  pyproject.toml  railway.json
api/agent/: digest.py  rule_agent.py  self_improve.py
api/agent/tools/: extract_field.py  filters.py  keyword_search.py  sample.py  semantic_search.py
api/classify/: defaults.py  evaluator.py  features.py  rules_engine.py  semantic_eval.py  sync_pipeline.py
api/core/: config.py  crypto.py  db.py  deps.py  dsl.py  google_oauth.py  llm.py  models.py  queue.py  ratelimit.py  session.py
api/gmail/: body.py  client.py  sync.py  thread_features.py  unsubscribe.py
api/migrations/: env.py
api/migrations/versions/: a1b2c3d4e5f6_allow_user_rule_source.py  b2c3d4e5f6a7_add_bucket_mode_rationale.py  c3d4e5f6a7b8_add_body_html_to_messages_lite.py  c7af282e1fd7_add_value_column_to_thread_tags.py  d4e5f6a7b8c9_add_digests_table.py  f36c5a44f4cb_initial_schema.py
api/routes/: auth.py  buckets.py  corrections.py  debug.py  digest.py  sync.py  threads.py  unsubscribe.py
api/tests/: test_config.py  test_dsl.py  test_features.py  test_ratelimit.py  test_semantic_eval.py  test_unsubscribe.py
docs/: README.md  api-reference.md  architecture.md  classification-pipeline.md  compliance.md  data-model.md  rule-agent.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  ruleFormat.ts  types.ts
frontend/src/components/: BucketBar.tsx  BucketEditorDialog.tsx  (+12 more)
(+1 files in other folders)
